--- a/AdoptaUnPerroSwift/AdoptaUnPerroSwift/Base.lproj/Main.storyboard
+++ b/AdoptaUnPerroSwift/AdoptaUnPerroSwift/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="449" id="CJf-h7-0up" customClass="MainTableViewCell" customModule="AdoptaUnPerroSwift" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="449" id="CJf-h7-0up" customClass="MainTableViewCell" customModule="AdoptaUnPerroSwift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="393" height="449"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CJf-h7-0up" id="tMA-Ef-f5w">
@@ -28,17 +28,15 @@
                                             <rect key="frame" x="20" y="68" width="353" height="224"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XAQ-iQ-bFn">
-                                            <rect key="frame" x="96" y="335" width="201" height="35"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="filled" title="MoreInformationButton"/>
-                                            <connections>
-                                                <segue destination="CKY-xy-RBk" kind="show" id="9cc-Rc-V2j"/>
-                                            </connections>
-                                        </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YD2-wz-A7h">
                                             <rect key="frame" x="158" y="11" width="77" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="LabelPulsar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uw8-mX-TGG">
+                                            <rect key="frame" x="86" y="353" width="220" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -47,9 +45,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="buttonMoreInformation" destination="XAQ-iQ-bFn" id="8un-Qq-R8N"/>
                                     <outlet property="dogImage" destination="0yz-qt-xY1" id="awJ-2N-IY7"/>
                                     <outlet property="dogName" destination="YD2-wz-A7h" id="qgL-2j-N1Y"/>
+                                    <outlet property="labelPulsar" destination="uw8-mX-TGG" id="gVi-aX-gjr"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -59,10 +57,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="biB-yz-nTk"/>
+                    <connections>
+                        <segue destination="CKY-xy-RBk" kind="show" identifier="ViewToDetails" id="hdF-yy-Yp8"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4DM-Fg-Kf0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="553" y="81"/>
+            <point key="canvasLocation" x="551.90839694656484" y="80.985915492957744"/>
         </scene>
         <!--Detail Dog View Controller-->
         <scene sceneID="hKd-x3-17c">
@@ -73,7 +74,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dzI-Lh-eOW">
-                                <rect key="frame" x="13" y="119" width="129" height="117"/>
+                                <rect key="frame" x="13" y="119" width="141" height="127"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r99-Lg-4r6">
@@ -91,7 +92,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogBreed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wm7-PI-7Ez">
-                                <rect key="frame" x="173" y="178" width="84" height="21"/>
+                                <rect key="frame" x="173" y="178" width="166" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
