--- a/AdoptaUnPerroSwift/AdoptaUnPerroSwift/Base.lproj/Main.storyboard
+++ b/AdoptaUnPerroSwift/AdoptaUnPerroSwift/Base.lproj/Main.storyboard
@@ -17,11 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="449" id="CJf-h7-0up" customClass="MainTableViewCell" customModule="AdoptaUnPerroSwift" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="449"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="383" id="CJf-h7-0up" customClass="MainTableViewCell" customModule="AdoptaUnPerroSwift" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="383"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CJf-h7-0up" id="tMA-Ef-f5w">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="449"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="383"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0yz-qt-xY1">
@@ -29,14 +29,14 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YD2-wz-A7h">
-                                            <rect key="frame" x="158" y="11" width="77" height="21"/>
+                                            <rect key="frame" x="176" y="22" width="77" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="LabelPulsar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uw8-mX-TGG">
-                                            <rect key="frame" x="86" y="353" width="220" height="21"/>
+                                            <rect key="frame" x="95" y="327" width="220" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -235,8 +235,8 @@
                                     <action selector="sendButtonTapped:" destination="0ud-0N-5ZF" eventType="touchUpInside" id="vwM-TL-zp5"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="labelInformacion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCn-JY-vau">
-                                <rect key="frame" x="171" y="103" width="127" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="labelInformation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCn-JY-vau">
+                                <rect key="frame" x="32" y="103" width="361" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -249,6 +249,7 @@
                     <navigationItem key="navigationItem" id="P52-jF-xdl"/>
                     <connections>
                         <outlet property="emailTextField" destination="cG3-ql-sbf" id="Mc9-76-px6"/>
+                        <outlet property="labelInformation" destination="GCn-JY-vau" id="PmF-oo-vK1"/>
                         <outlet property="nameTextField" destination="aru-SA-8UV" id="rmo-Vu-XDC"/>
                         <outlet property="phoneTextField" destination="nrj-PD-WK6" id="mdc-Zc-dHs"/>
                         <outlet property="sendButton" destination="8hz-GL-h31" id="inl-aI-qfI"/>
@@ -269,15 +270,66 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="ceh-fz-KQl" kind="relationship" relationship="rootViewController" id="EMR-xe-TUT"/>
+                        <segue destination="jCm-FN-aDJ" kind="relationship" relationship="rootViewController" id="gYS-dS-ajZ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLk-qS-ll3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-385" y="81"/>
+            <point key="canvasLocation" x="-1430" y="81"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="w6O-dg-mBS">
+            <objects>
+                <viewController id="jCm-FN-aDJ" customClass="WelcomeViewController" customModule="AdoptaUnPerroSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s0X-1M-cr2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to AdoptADog!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wd-xa-VZW">
+                                <rect key="frame" x="77" y="274" width="238" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cXK-an-4aE">
+                                <rect key="frame" x="165" y="543" width="62" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Start"/>
+                                <connections>
+                                    <action selector="passToHomeView:" destination="jCm-FN-aDJ" eventType="touchUpInside" id="Mlu-wH-MnL"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logoadoptadog" translatesAutoresizingMaskIntoConstraints="NO" id="Yli-zG-CoQ">
+                                <rect key="frame" x="76" y="337" width="240" height="177"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="by rlopez" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOj-bn-ge6">
+                                <rect key="frame" x="161" y="797" width="53" height="15"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="XI6-fr-VVO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Y8E-FV-VAh"/>
+                    <connections>
+                        <outlet property="buttonStart" destination="cXK-an-4aE" id="f2q-Tx-Hye"/>
+                        <outlet property="logoAdoptADog" destination="Yli-zG-CoQ" id="H0I-8u-NJl"/>
+                        <segue destination="ceh-fz-KQl" kind="show" identifier="showHome" id="4Dd-Qd-ogT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Evx-rV-yEW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="81"/>
         </scene>
     </scenes>
     <resources>
+        <image name="logoadoptadog" width="444" height="444"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
